--- a/src/locale/en/fields.json
+++ b/src/locale/en/fields.json
@@ -1,5 +1,6 @@
 {
   "fields": {
+    "name": "The name",
     "email": "The email address",
     "password": "The password",
     "passwordConfirm": "The password confirm"
