--- a/src/locale/vi/fields.json
+++ b/src/locale/vi/fields.json
@@ -1,5 +1,6 @@
 {
   "fields": {
+    "name": "Tên",
     "email": "Địa chỉ email",
     "password": "Mật khẩu",
     "passwordConfirm": "Xác nhận mật khẩu"
